fixed mobile number on mobile

--- a/webpages/css/about.css
+++ b/webpages/css/about.css
@@ -451,7 +451,7 @@ img.hover-shadow {
   background-color: rgb(192, 191, 191);
   border: 2px solid rgb(192, 191, 191);
   resize: none;
-  font-family: "Verdana";
+  font-family: "Raleway";
   padding: 0.7vw;
 }
 
